<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">No products to show</string>
    <string name="empty_view_subtitle_text">There are no products registered yet</string>
    <string name="action_delete_all_entries">Delete all items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="hint_product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="provider">Provider</string>
    <string name="provider_email">Provider email</string>
    <string name="provider_phone">Provider phone</string>
    <string name="image">Product Image</string>
    <string name="add_product">Add a new product</string>
    <string name="update_product">Update product</string>
    <string name="delete_dialog_msg">Delete product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_insert">Error with saving product</string>
    <string name="insert_ok">Product inserted</string>
    <string name="update_failed">Update failed</string>
    <string name="update_success">Product updated</string>
    <string name="delete_product_failed">Failed on delete product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard unsaved changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Cancel</string>
    <string name="qtd">Qty : </string>
    <string name="contact_provider">Contact provider</string>
    <string name="quantity_error">Product must have 0 or more quantity</string>
</resources>
